changed exports to hide some internal functions with silly names and without docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
 useDynLib(keyperm, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
-exportPattern("^[[:alpha:]]+")
+export(create_ifl)
+export(keyness_scores)
+export(keyperm)
