--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,12 @@
 Package: keyperm
 Type: Package
 Title: Keyword Analysis Using Permutation Tests
-Version: 0.0.0.9019
+Version: 0.0.0.9020
 Authors@R: person("Thoralf", "Mildenberger", email = "mild@zhaw.ch", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0001-7242-1873"))
 Description: Implementation of permutation-based keyword analysis for corpus linguistics.
 License: GPL (>= 2)
-Imports: Rcpp (>= 1.0.1),
-    Matrix,
-    slam,
-    tm
+Imports: slam,
+  tm
 LinkingTo: Rcpp
 RoxygenNote: 7.1.0
