changed version to 0.1.0 and added arXiv identifier in description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: keyperm
 Type: Package
 Title: Keyword Analysis Using Permutation Tests
-Version: 0.0.0.9020
+Version: 0.1.0
 Authors@R: person("Thoralf", "Mildenberger", email = "mild@zhaw.ch", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0001-7242-1873"))
-Description: Implementation of permutation-based keyword analysis for corpus linguistics.
+Description: Efficient implementation of permutation tests for keyword analysis in corpus linguistics <arXiv:2308.13383>.
 License: GPL (>= 2)
 Imports: slam,
   tm
